[gd_scene load_steps=18 format=3 uid="uid://b4fd7fjav1du4"]

[ext_resource type="Script" path="res://submarine_inside.gd" id="1_aepql"]
[ext_resource type="TileSet" uid="uid://4mrka1unxr8b" path="res://tiles.tres" id="1_f8oy6"]
[ext_resource type="Texture2D" uid="uid://c3wiem37128kb" path="res://assets/backlight.png" id="2_rghc8"]
[ext_resource type="Texture2D" uid="uid://bi42bo7rs2q4s" path="res://assets/Attacks/Flashlight/2d_lights_and_shadows_neutral_point_light.webp" id="3_oh4hl"]
[ext_resource type="Script" path="res://LightRepair.gd" id="5_s4tc2"]
[ext_resource type="Texture2D" uid="uid://b3guan1uyewu1" path="res://assets/yo.png" id="6_rhtq3"]
[ext_resource type="Shader" path="res://background.gdshader" id="7_4crto"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2hef"]
size = Vector2(21, 33)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mofby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0m2t5"]
bg_color = Color(0.182695, 0.615152, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5sn5"]
size = Vector2(72.8542, 71.9597)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jekow"]
noise_type = 2
frequency = 0.0085
fractal_octaves = 2
fractal_lacunarity = 2.86

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rs5db"]
seamless = true
noise = SubResource("FastNoiseLite_jekow")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6b82k"]
frequency = 0.0405
offset = Vector3(261.17, 312.93, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7xa4g"]
seamless = true
noise = SubResource("FastNoiseLite_6b82k")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5j7r"]
shader = ExtResource("7_4crto")
shader_parameter/color_1 = Color(0, 0, 0, 1)
shader_parameter/color_2 = Color(0.0837919, 0.0762824, 0.218781, 1)
shader_parameter/color_3 = Color(0.180392, 0.137255, 0.423529, 1)
shader_parameter/wave_direction = Vector2(0.02, 0.03)
shader_parameter/wave_2_direction = Vector2(0.3, -0.1)
shader_parameter/time_scale = 0.05
shader_parameter/color_2_threshold = 0.58
shader_parameter/color_3_threshold = 0.295
shader_parameter/wave_count = 20.0
shader_parameter/speed = 3.0
shader_parameter/height = 0.003
shader_parameter/texture_normal = SubResource("NoiseTexture2D_rs5db")
shader_parameter/texture_normal2 = SubResource("NoiseTexture2D_7xa4g")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xn1x1"]

[node name="SubmarineInside" type="Node2D"]
script = ExtResource("1_aepql")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -457.0
offset_top = -292.0
offset_right = 1003.0
offset_bottom = 496.0
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
z_index = 101
tile_set = ExtResource("1_f8oy6")
format = 2
layer_0/tile_data = PackedInt32Array(720896, 458752, 1610612741, 786432, 458752, 1610612741, 851968, 458752, 1610612741, 917504, 458752, 1610612741, 983040, 458752, 1610612741, 1048576, 458752, 1610612741, 589825, 458752, 1342177285, 655361, 458752, 1342177285, 851969, 458752, 805306373, 917505, 196608, 1, 983041, 196608, 1, 1048577, 196608, 1, 1114113, 327680, 5, 1179649, 458752, 1610612741, 524290, 458752, 1342177285, 851970, 458752, 805306373, 917506, 196608, 1, 983042, 196608, 1, 1048578, 196608, 1, 1114114, 458752, 5, 1179650, 65536, 1, 1245186, 458752, 1610612741, 458755, 458752, 1342177285, 851971, 458752, 805306373, 917507, 196608, 1, 983043, 196608, 1, 1048579, 196608, 1, 1114115, 458752, 5, 1179651, 65536, 1, 1245187, 65536, 1, 1310723, 458752, 1610612741, 393220, 458752, 1342177285, 851972, 458752, 805306373, 917508, 196608, 1, 983044, 196608, 1, 1048580, 196608, 1, 1114116, 458752, 5, 1179652, 65536, 1, 1245188, 65536, 1, 1310724, 65536, 1, 1376260, 458752, 5, 327685, 458752, 1342177285, 851973, 458752, 805306373, 917509, 196608, 1, 983045, 196608, 1, 1048581, 196608, 1, 1114117, 458752, 5, 1179653, 65536, 1, 1245189, 65536, 1, 1310725, 65536, 1, 1376261, 458752, 5, 262150, 458752, 5, 851974, 458752, 805306373, 917510, 196608, 1, 983046, 196608, 1, 1048582, 196608, 1, 1114118, 458752, 5, 1179654, 65536, 1, 1245190, 65536, 1, 1310726, 65536, 1, 1376262, 65536, 1, 1441798, 458752, 5, 262151, 458752, 5, 851975, 458752, 805306373, 917511, 196608, 1, 983047, 196608, 1, 1048583, 196608, 1, 1114119, 458752, 5, 1179655, 65536, 1, 1245191, 458752, 1, 1310727, 65536, 1, 1376263, 65536, 1, 1441799, 458752, 5, 262152, 458752, 5, 851976, 458752, 805306373, 917512, 196608, 1, 983048, 196608, 1, 1048584, 196608, 1, 1114120, 458752, 5, 1179656, 65536, 1, 1245192, 65536, 1, 1310728, 65536, 1, 1376264, 65536, 1, 1441800, 458752, 5, 196617, 458752, 5, 262153, 196608, 1, 327689, 458752, 1342177285, 393225, 458752, 1342177285, 851977, 458752, 805306373, 917513, 196608, 1, 983049, 196608, 1, 1048585, 196608, 1, 1114121, 458752, 5, 1179657, 65536, 1, 1245193, 458752, 1, 1310729, 65536, 1, 1376265, 65536, 1, 1441801, 458752, 5, 131082, 458752, 5, 196618, 196608, 1, 262154, 196608, 1, 327690, 196608, 1, 393226, 196608, 1, 458762, 458752, 1342177285, 524298, 458752, 1342177285, 589834, 458752, 1342177285, 655370, 458752, 1342177285, 720906, 458752, 1342177285, 786442, 458752, 1342177285, 851978, 196608, 1, 917514, 196608, 1, 983050, 196608, 1, 1048586, 196608, 1, 1114122, 458752, 5, 1179658, 65536, 1, 1245194, 65536, 1, 1310730, 65536, 1, 1376266, 65536, 1, 1441802, 458752, 5, -786421, 458752, 1, -720885, 458752, 1, -655349, 458752, 3, -589813, 458752, 3, -524277, 458752, 1, -458741, 458752, 1, 131083, 458752, 5, 196619, 196608, 1, 262155, 196608, 1, 327691, 196608, 1, 393227, 196608, 1, 458763, 196608, 1, 524299, 196608, 1, 589835, 196608, 1, 655371, 196608, 1, 720907, 196608, 1, 786443, 196608, 1, 851979, 196608, 1, 917515, 196608, 1, 983051, 196608, 1, 1048587, 196608, 1, 1114123, 458752, 5, 1179659, 65536, 1, 1245195, 458752, 1, 1310731, 65536, 1, 1376267, 65536, 1, 1441803, 458752, 5, -786420, 458752, 1, -720884, 458752, 1, -655348, 458752, 3, -589812, 458752, 3, -524276, 458752, 1, -458740, 458752, 1, 65548, 65536, 1, 131084, 458752, 5, 196620, 196608, 1, 262156, 196608, 1, 327692, 196608, 1, 393228, 196608, 1, 458764, 196608, 1, 524300, 196608, 1, 589836, 196608, 1, 655372, 196608, 1, 720908, 196608, 1, 786444, 196608, 1, 851980, 196608, 1, 917516, 196608, 1, 983052, 196608, 1, 1048588, 196608, 1, 1114124, 458752, 5, 1179660, 65536, 1, 1245196, 65536, 1, 1310732, 65536, 1, 1376268, 65536, 1, 1441804, 458752, 5, -720883, 458752, 1, -655347, 458752, 1, -589811, 458752, 1, -524275, 458752, 1, 13, 65536, 1, 65549, 327680, 1, 131085, 458752, 5, 196621, 196608, 1, 262157, 196608, 1, 327693, 196608, 1, 393229, 196608, 1, 458765, 196608, 1, 524301, 196608, 1, 589837, 196608, 1, 655373, 196608, 5, 720909, 196608, 5, 786445, 196608, 1, 851981, 196608, 1, 917517, 196608, 1, 983053, 196608, 1, 1048589, 196608, 1, 1114125, 458752, 5, 1179661, 65536, 1, 1376269, 65536, 1, 1441805, 458752, 5, -720882, 65536, 1, -655346, 458752, 1, -589810, 458752, 1, -524274, 65536, 1, -65522, 65536, 1, 14, 327680, 1, 65550, 196608, 1, 131086, 458752, 5, 196622, 196608, 1, 262158, 196608, 1, 327694, 196608, 1, 393230, 196608, 1, 458766, 196608, 1, 524302, 196608, 1, 589838, 196608, 5, 786446, 196608, 5, 851982, 196608, 1, 917518, 196608, 1, 983054, 196608, 1, 1048590, 196608, 1, 1114126, 458752, 5, 1441806, 458752, 5, -720881, 65536, 1, -655345, 196608, 1, -589809, 196608, 1, -524273, 65536, 1, -65521, 65536, 1, 15, 327680, 1, 65551, 196608, 1, 131087, 458752, 5, 196623, 196608, 1, 262159, 196608, 1, 327695, 196608, 1, 393231, 196608, 1, 458767, 196608, 1, 524303, 196608, 5, 851983, 196608, 5, 917519, 196608, 1, 983055, 196608, 1, 1048591, 196608, 1, 1114127, 458752, 5, 1441807, 458752, 5, -720880, 65536, 1, -655344, 196608, 1, -589808, 196608, 1, -524272, 65536, 1, -131056, 65536, 1, -65520, 65536, 1, 16, 327680, 1, 65552, 196608, 1, 131088, 458752, 5, 196624, 196608, 1, 262160, 196608, 1, 327696, 196608, 1, 393232, 196608, 1, 458768, 196608, 1, 524304, 196608, 5, 851984, 196608, 5, 917520, 196608, 1, 983056, 196608, 1, 1048592, 196608, 1, 1114128, 458752, 5, 1441808, 458752, 5, -720879, 65536, 1, -655343, 196608, 1, -589807, 458752, 1, -524271, 196608, 1, -458735, 65536, 1, -393199, 65536, 1, -327663, 65536, 1, -262127, 65536, 1, -196591, 65536, 1, -131055, 65536, 1, -65519, 65536, 1, 17, 327680, 1, 65553, 196608, 1, 131089, 458752, 5, 196625, 196608, 1, 262161, 196608, 1, 327697, 196608, 1, 393233, 196608, 1, 458769, 196608, 1, 524305, 196608, 1, 589841, 196608, 5, 786449, 196608, 5, 851985, 196608, 1, 917521, 196608, 1, 983057, 196608, 1, 1048593, 196608, 1, 1114129, 458752, 5, 1179665, 458752, 1, 1245201, 458752, 1, 1310737, 65536, 1, 1376273, 65536, 1, 1441809, 458752, 5, -720878, 65536, 1, -655342, 65536, 1, -589806, 196608, 1, -524270, 196608, 1, -458734, 458752, 1, -393198, 196608, 1, -327662, 458752, 1, -262126, 196608, 1, -196590, 458752, 1, -131054, 196608, 1, -65518, 65536, 1, 18, 327680, 1, 65554, 196608, 1, 131090, 458752, 5, 196626, 196608, 1, 262162, 196608, 1, 327698, 196608, 1, 393234, 196608, 1, 458770, 196608, 1, 524306, 196608, 1, 589842, 196608, 1, 655378, 196608, 5, 720914, 196608, 5, 786450, 196608, 1, 851986, 196608, 1, 917522, 196608, 1, 983058, 196608, 1, 1048594, 196608, 1, 1114130, 458752, 5, 1179666, 65536, 1, 1245202, 65536, 1, 1310738, 65536, 1, 1376274, 65536, 1, 1441810, 458752, 5, -655341, 65536, 1, -589805, 65536, 1, -524269, 65536, 1, -458733, 65536, 1, -393197, 65536, 1, -327661, 65536, 1, -262125, 65536, 1, -196589, 65536, 1, -131053, 65536, 1, -65517, 65536, 1, 19, 327680, 1, 65555, 196608, 1, 131091, 458752, 5, 196627, 196608, 1, 262163, 196608, 1, 327699, 196608, 1, 393235, 196608, 1, 458771, 196608, 1, 524307, 196608, 1, 589843, 196608, 1, 655379, 196608, 1, 720915, 196608, 1, 786451, 196608, 1, 851987, 196608, 1, 917523, 196608, 1, 983059, 196608, 1, 1048595, 196608, 1, 1114131, 458752, 5, 1179667, 65536, 1, 1245203, 458752, 1, 1310739, 65536, 1, 1376275, 458752, 5, 1441811, 65536, 5, -65516, 65536, 1, 20, 327680, 1, 65556, 196608, 1, 131092, 458752, 5, 196628, 65536, 5, 262164, 196608, 1, 327700, 196608, 1, 393236, 196608, 1, 458772, 196608, 1, 524308, 196608, 1, 589844, 196608, 1, 655380, 196608, 1, 720916, 196608, 1, 786452, 196608, 1, 851988, 196608, 1, 917524, 196608, 1, 983060, 196608, 1, 1048596, 196608, 1, 1114132, 458752, 5, 1179668, 65536, 1, 1245204, 65536, 1, 1310740, 458752, 1342177285, 1376276, 65536, 1, 1441812, 458752, 5, -65515, 65536, 1, 21, 327680, 1, 65557, 196608, 1, 131093, 458752, 5, 196629, 196608, 1, 262165, 65536, 5, 327701, 196608, 1, 393237, 196608, 1, 458773, 196608, 1, 524309, 196608, 1, 589845, 196608, 1, 655381, 196608, 1, 720917, 196608, 1, 786453, 196608, 1, 851989, 196608, 1, 917525, 196608, 1, 983061, 196608, 1, 1048597, 196608, 1, 1114133, 65536, 5, 1179669, 458752, 1342177285, 1245205, 458752, 1342177285, 1310741, 65536, 1, 1376277, 65536, 1, 1441813, 458752, 5, 22, 65536, 1, 65558, 196608, 1, 131094, 458752, 5, 196630, 196608, 1, 262166, 196608, 1, 327702, 458752, 1342177285, 393238, 458752, 1342177285, 458774, 458752, 1342177285, 524310, 458752, 1342177285, 589846, 458752, 1342177285, 655382, 458752, 1342177285, 720918, 458752, 1342177285, 786454, 458752, 1342177285, 851990, 458752, 1342177285, 917526, 196608, 1, 983062, 196608, 1, 1048598, 196608, 1, 1114134, 458752, 5, 1179670, 65536, 1, 1245206, 65536, 1, 1310742, 65536, 1, 1376278, 65536, 1, 1441814, 458752, 5, 23, 65536, 1, 65559, 196608, 1, 131095, 458752, 5, 196631, 458752, 1, 262167, 196608, 1, 327703, 196608, 1, 393239, 196608, 1, 458775, 196608, 1, 524311, 196608, 1, 589847, 196608, 1, 655383, 196608, 1, 720919, 196608, 1, 786455, 196608, 1, 851991, 196608, 1, 917527, 196608, 1, 983063, 196608, 1, 1048599, 196608, 1, 1114135, 458752, 5, 1179671, 65536, 1, 1245207, 458752, 1, 1310743, 65536, 1, 1376279, 65536, 1, 1441815, 458752, 5, 65560, 65536, 1, 131096, 458752, 5, 196632, 196608, 1, 262168, 196608, 1, 327704, 458752, 1, 393240, 196608, 1, 458776, 458752, 1, 524312, 196608, 1, 589848, 196608, 1, 655384, 196608, 5, 720920, 196608, 5, 786456, 196608, 1, 851992, 196608, 1, 917528, 196608, 1, 983064, 196608, 1, 1048600, 196608, 1, 1114136, 458752, 5, 1179672, 65536, 1, 1245208, 65536, 1, 1310744, 65536, 1, 1376280, 458752, 5, 131097, 458752, 5, 196633, 196608, 1, 262169, 196608, 1, 327705, 196608, 1, 393241, 196608, 1, 458777, 196608, 1, 524313, 196608, 1, 589849, 196608, 5, 786457, 196608, 5, 851993, 196608, 1, 917529, 196608, 1, 983065, 196608, 1, 1048601, 196608, 1, 1114137, 458752, 5, 1179673, 65536, 1, 1245209, 458752, 1, 1310745, 65536, 1, 1376281, 458752, 5, 196634, 458752, 5, 262170, 196608, 1, 327706, 196608, 1, 393242, 196608, 1, 458778, 196608, 1, 524314, 196608, 5, 851994, 196608, 5, 917530, 196608, 1, 983066, 196608, 1, 1048602, 196608, 1, 1114138, 458752, 5, 1179674, 65536, 1, 1245210, 65536, 1, 1310746, 65536, 1, 1376282, 458752, 5, 131099, 65536, 1, 196635, 196608, 1, 262171, 458752, 1342177285, 327707, 196608, 1, 393243, 196608, 1, 458779, 196608, 1, 524315, 196608, 5, 851995, 196608, 5, 917531, 196608, 1, 983067, 196608, 1, 1048603, 196608, 1, 1114139, 458752, 5, 1179675, 65536, 1, 1245211, 65536, 1, 1310747, 458752, 5, 65564, 65536, 1, 131100, 327680, 1, 196636, 196608, 1, 262172, 196608, 1, 327708, 458752, 1342177285, 393244, 196608, 1, 458780, 196608, 1, 524316, 196608, 1, 589852, 196608, 5, 786460, 196608, 5, 851996, 196608, 1, 917532, 196608, 1, 983068, 196608, 1, 1048604, 196608, 1, 1114140, 458752, 5, 1179676, 65536, 1, 1245212, 65536, 1, 1310748, 458752, 5, 65565, 65536, 1, 131101, 327680, 1, 196637, 196608, 1, 262173, 196608, 1, 327709, 196608, 1, 393245, 458752, 1342177285, 458781, 196608, 1, 524317, 196608, 1, 589853, 196608, 1, 655389, 196608, 5, 720925, 196608, 5, 786461, 196608, 1, 851997, 196608, 1, 917533, 196608, 1, 983069, 196608, 1, 1048605, 196608, 1, 1114141, 458752, 5, 1179677, 65536, 1, 1245213, 458752, 5, 30, 65536, 1, 65566, 327680, 1, 131102, 196608, 1, 196638, 196608, 1, 262174, 196608, 1, 327710, 196608, 1, 393246, 196608, 1, 458782, 458752, 1342177285, 524318, 458752, 1342177285, 589854, 196608, 1, 655390, 196608, 1, 720926, 196608, 1, 786462, 196608, 1, 851998, 196608, 1, 917534, 196608, 1, 983070, 196608, 1, 1048606, 458752, 1342177285, 1114142, 327680, 1, 1179678, 458752, 5, 31, 65536, 1, 65567, 327680, 1, 131103, 196608, 1, 196639, 196608, 1, 262175, 196608, 1, 327711, 196608, 1, 393247, 65536, 1, 589855, 458752, 1342177285, 655391, 196608, 1, 720927, 196608, 1, 786463, 196608, 1, 851999, 196608, 1, 917535, 196608, 1, 983071, 458752, 1342177285, 65568, 65536, 1, 131104, 65536, 1, 196640, 65536, 1, 262176, 65536, 1, 327712, 65536, 1, 655392, 458752, 1342177285, 720928, 458752, 1342177285, 786464, 458752, 1342177285, 852000, 458752, 1342177285, 917536, 458752, 1342177285, 524321, 65536, 1, 720929, 65536, 1, 786465, 65536, 1, 852001, 65536, 1, 458786, 65536, 1, 524322, 65536, 1, 589858, 65536, 1, 720930, 65536, 1, 786466, 65536, 1, 852002, 65536, 1, 393251, 65536, 1, 458787, 65536, 1, 524323, 65536, 1, 589859, 65536, 1, 786467, 65536, 1, 458788, 65536, 1, 524324, 65536, 1, 589860, 65536, 1, 655396, 65536, 1, 720932, 65536, 1, 786468, 196608, 1, 852004, 65536, 1, 917540, 65536, 1, 983076, 65536, 1, 1048612, 65536, 1, 1114148, 65536, 1, 917541, 65536, 1, 983077, 65536, 1, 1048613, 65536, 1, 1114149, 65536, 1, 1179685, 65536, 1, 983078, 65536, 1, 1048614, 65536, 1, 1114150, 65536, 1, -589814, 458752, 1, -655350, 458752, 1, 1179662, 65536, 1, 1245198, 65536, 1, 1310734, 65536, 1, 1376270, 65536, 1, 1179663, 65536, 1, 1245199, 65536, 1, 1310735, 65536, 1, 1376271, 458752, 1, 1179664, 65536, 1, 1245200, 65536, 1, 1310736, 458752, 1, 1376272, 65536, 1, 1245197, 458752, 1, 1310733, 65536, 1)

[node name="Backlight" type="PointLight2D" parent="."]
z_index = 20
position = Vector2(348, 92.5)
scale = Vector2(1.9661, 1.98986)
energy = 0.85
blend_mode = 1
texture = ExtResource("2_rghc8")
texture_scale = 2.0

[node name="PointLight2D" type="PointLight2D" parent="Backlight"]
position = Vector2(-162.057, 78.146)
scale = Vector2(0.368347, 0.420098)
color = Color(1, 0.517647, 0.454902, 1)
energy = 0.8
shadow_enabled = true
texture = ExtResource("3_oh4hl")

[node name="PointLight2D4" type="PointLight2D" parent="Backlight"]
position = Vector2(-39.9345, 99.253)
scale = Vector2(0.649137, 0.418135)
color = Color(1, 0.517647, 0.454902, 1)
energy = 0.8
shadow_enabled = true
texture = ExtResource("3_oh4hl")

[node name="PointLight2D2" type="PointLight2D" parent="Backlight"]
position = Vector2(81.8879, 53.0187)
scale = Vector2(0.56963, 0.553587)
color = Color(1, 0.517647, 0.454902, 1)
energy = 0.8
shadow_enabled = true
texture = ExtResource("3_oh4hl")

[node name="PointLight2D3" type="PointLight2D" parent="Backlight"]
position = Vector2(-46.7931, 41.9627)
scale = Vector2(0.449017, 0.406356)
color = Color(1, 0.517647, 0.454902, 1)
energy = 0.8
shadow_enabled = true
texture = ExtResource("3_oh4hl")

[node name="PointLight2D5" type="PointLight2D" parent="Backlight"]
position = Vector2(-79.3004, -119.355)
scale = Vector2(0.0877662, 0.0863753)
color = Color(1, 0.517647, 0.454902, 1)
energy = 2.44
shadow_enabled = true
texture = ExtResource("3_oh4hl")

[node name="LightRepair" type="Area2D" parent="." groups=["lightrepair"]]
z_index = 101
position = Vector2(199, 253)
collision_layer = 4
collision_mask = 4
script = ExtResource("5_s4tc2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightRepair"]
light_mask = 4
visibility_layer = 4
position = Vector2(2, 2)
shape = SubResource("RectangleShape2D_i2hef")

[node name="Label" type="Label" parent="LightRepair/CollisionShape2D"]
z_index = 2000
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -36.0
offset_right = 47.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "[E] to repair"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 123.0
offset_top = 31.0
offset_right = 139.0
offset_bottom = 136.0
rotation = 1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_mofby")
theme_override_styles/fill = SubResource("StyleBoxFlat_0m2t5")
max_value = 8.0
fill_mode = 3
show_percentage = false

[node name="TimonSprite2D" type="Sprite2D" parent="."]
z_index = 101
position = Vector2(41, 248)
scale = Vector2(0.685714, 0.673913)
texture = ExtResource("6_rhtq3")

[node name="TimonArea2D" type="Area2D" parent="TimonSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TimonSprite2D/TimonArea2D"]
position = Vector2(-1.07288e-05, -1.54972e-06)
shape = SubResource("RectangleShape2D_s5sn5")
debug_color = Color(0.857803, 0.000721961, 0.881126, 0.42)

[node name="Ventana" type="Sprite2D" parent="."]
z_index = 50
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(112, 160)
scale = Vector2(0.185058, 0.185547)
texture = SubResource("NoiseTexture2D_xn1x1")

[node name="Fondo" type="Sprite2D" parent="Ventana"]
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(-382.357, 172.021)
scale = Vector2(0.514693, 0.328042)
texture = SubResource("NoiseTexture2D_xn1x1")

[node name="Fondo2" type="Sprite2D" parent="Ventana"]
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(-338.44, 4.94753)
scale = Vector2(0.343139, 0.324589)
texture = SubResource("NoiseTexture2D_xn1x1")

[node name="Fondo3" type="Sprite2D" parent="Ventana"]
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(43.7871, -343.579)
scale = Vector2(0.504419, 0.342104)
texture = SubResource("NoiseTexture2D_xn1x1")

[node name="Fondo4" type="Sprite2D" parent="Ventana"]
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(-121.729, -299.115)
scale = Vector2(0.158882, 0.178947)
texture = SubResource("NoiseTexture2D_xn1x1")

[node name="Fondo5" type="Sprite2D" parent="Ventana"]
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(-295.515, -121.263)
scale = Vector2(0.175461, 0.168421)
texture = SubResource("NoiseTexture2D_xn1x1")

[node name="Ventana1" type="Sprite2D" parent="."]
z_index = 50
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(256, 176)
scale = Vector2(0.125, 0.125)
texture = SubResource("NoiseTexture2D_xn1x1")

[node name="Ventana2" type="Sprite2D" parent="."]
z_index = 50
texture_repeat = 1
material = SubResource("ShaderMaterial_i5j7r")
position = Vector2(432, 177)
scale = Vector2(0.123047, 0.125)
texture = SubResource("NoiseTexture2D_xn1x1")

[connection signal="area_entered" from="LightRepair" to="LightRepair" method="_on_area_entered"]
[connection signal="body_entered" from="LightRepair" to="." method="_on_light_repair_body_entered"]
[connection signal="body_entered" from="LightRepair" to="LightRepair" method="_on_body_entered"]
[connection signal="body_exited" from="LightRepair" to="." method="_on_light_repair_body_exited"]
[connection signal="body_exited" from="LightRepair" to="LightRepair" method="_on_body_exited"]
[connection signal="body_entered" from="TimonSprite2D/TimonArea2D" to="." method="_on_timon_area_2d_body_entered"]
[connection signal="body_exited" from="TimonSprite2D/TimonArea2D" to="." method="_on_timon_area_2d_body_exited"]
